about page responsive complted

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.gradientbg-aboutsec1 {
+    background-image:
+    linear-gradient(to bottom, transparent, rgba(165,30,30,0.7849264705882353) ),
+    url('../images/about.png');
+}
+.gradient-bg {
+    background: rgb(165,30,30);
+    background: linear-gradient(180deg, rgba(165,30,30,0.7849264705882353) 0%, rgba(184,170,132,0.9866071428571429) 47%);
+    }
+.gradient-mission {
+    background: #7E2121;
+    background: linear-gradient(90deg, #282828 0%,  #7E2121 47%);
+    }
+.gradient-vision {
+        background: #7E2121;
+        background: linear-gradient(270deg, #282828 0%,  #7E2121 47%);
+        }
+        .gradientbg-aboutsec2 {
+            background-image:
+            linear-gradient(to bottom, transparent, #6b6767 ),
+            url('../images/fields.png');
+        }
