--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    background-color: #B8AA84;
-    max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
+.swiper-button-prev {
+    margin-left: 40px;
+}
+.swiper-button-next {
+    margin-right: 40px;
 }
 
 .swiper-button-prev::after,
@@ -24,6 +24,12 @@ body {
     font-weight: 900 !important;
 }
 
+.swiper-slide {
+    &.swiper-slide-active .target-component{
+      opacity: 1;
+    }
+  }
+
 .bg-h-gradiant {
     /* background: linear-gradient(180deg, rgba(165, 30, 30, 0.7849264705882353) 0%, rgba(184, 170, 132, 0.9866071428571429) 47%); */
     background: linear-gradient(180deg, rgba(165, 30, 30, 0) 0%, #A3252A 100%);
@@ -37,17 +43,23 @@ body {
 
 @media (max-width:680px) {
 
+    .swiper-button-prev {
+        margin-left: -15px;
+    }
+    .swiper-button-next {
+        margin-right: -15px;
+    }
     .swiper-button-prev::after,
     .swiper-button-next::after {
         color: #A51E1E;
         font-weight: bolder;
-        font-size: 35px !important;
+        font-size: 25px !important;
     }
 
     .arrowstyle .swiper-button-prev::after,
     .arrowstyle .swiper-button-next::after {
         color: #B8AA84 !important;
-        font-size: 35px !important;
+        font-size: 25px !important;
         font-weight: 900 !important;
     }
 }
